# cookiecutter-c

./: .pre-commit-config.yaml  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.project_slug }}/: .gitignore  LICENSE  README.md  conanfile.py  meson.build  {{ cookiecutter.project_slug }}.code-workspace
{{ cookiecutter.project_slug }}/.github/workflows/: main.yml
{{ cookiecutter.project_slug }}/src/: main.c
